Fix the logic for loading the spectra

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ML methods that will be used include ['pca', 'pc-lda', 'pc-rf', 'lda-rf', 'pc-svm', 'lda-svm']\n"
+     ]
+    }
+   ],
    "source": [
     "supported_classif_methods = ['pc-lda', 'rf', 'pc-rf', 'lda-rf', 'svm','pc-svm','lda-svm']\n",
     "supported_ML_methods = supported_classif_methods + ['pca']\n",
@@ -91,11 +99,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No such experiment. These are all existing experiments: \n",
+      "/home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15\n",
+      "Input [c] if you want to run these experiments\n",
+      "--Return--\n",
+      "> <ipython-input-4-96d0b79f7a56>(23)<module>()->None\n",
+      "-> pdb.set_trace()\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "(Pdb)  c\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate a list of random seeds to perform experiments\n",
     "if config.data_split_method == 'intra':\n",
@@ -150,7 +178,110 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***********************************************************\n",
+      "Begin experiment  1 / 1 : EX15-4-prime-stocked-exo3v15\n",
+      "***********************************************************\n",
+      "Classes =  ['HEK', 'HepG', 'MCF7', 'MDAMB', 'PC3']\n",
+      "and their corresponding colors:  ['#008000', '#ff00ff', '#b8860b', '#008080', '#ff0000']\n",
+      "------ Begin: Get common wavenumbers ------\n",
+      "1/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No1-P1.txt\n",
+      "2/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No1-P2.txt\n",
+      "3/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No1-P3.txt\n",
+      "4/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No2-P1.txt\n",
+      "5/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No2-P2.txt\n",
+      "6/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No2-P3.txt\n",
+      "7/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No3-P1.txt\n",
+      "8/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No3-P2.txt\n",
+      "9/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No3-P3.txt\n",
+      "10/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No4-P1.txt\n",
+      "11/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No4-P2.txt\n",
+      "12/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No4-P3.txt\n",
+      "13/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No5-P1.txt\n",
+      "14/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No5-P2.txt\n",
+      "15/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No5-P3.txt\n",
+      "16/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HepG/HepG-No1-P1.txt\n",
+      "17/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HepG/HepG-No1-P2.txt\n",
+      "18/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HepG/HepG-No1-P3.txt\n",
+      "19/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HepG/HepG-No2-P1.txt\n",
+      "20/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HepG/HepG-No2-P2.txt\n",
+      "21/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HepG/HepG-No2-P3.txt\n",
+      "22/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HepG/HepG-No3-P1.txt\n",
+      "23/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HepG/HepG-No3-P2.txt\n",
+      "24/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HepG/HepG-No3-P3.txt\n",
+      "25/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HepG/HepG-No4-P1.txt\n",
+      "26/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HepG/HepG-No4-P2.txt\n",
+      "27/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HepG/HepG-No4-P3.txt\n",
+      "28/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HepG/HepG-No5-P1.txt\n",
+      "29/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HepG/HepG-No5-P2.txt\n",
+      "30/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HepG/HepG-No5-P3.txt\n",
+      "31/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MCF7/MCF7-No1-P1.txt\n",
+      "32/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MCF7/MCF7-No1-P2.txt\n",
+      "33/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MCF7/MCF7-No1-P3.txt\n",
+      "34/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MCF7/MCF7-No2-P1.txt\n",
+      "35/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MCF7/MCF7-No2-P2.txt\n",
+      "36/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MCF7/MCF7-No2-P3.txt\n",
+      "37/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MCF7/MCF7-No3-P1.txt\n",
+      "38/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MCF7/MCF7-No3-P2.txt\n",
+      "39/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MCF7/MCF7-No3-P3.txt\n",
+      "40/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MCF7/MCF7-No4-P1.txt\n",
+      "41/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MCF7/MCF7-No4-P2.txt\n",
+      "42/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MCF7/MCF7-No4-P3.txt\n",
+      "43/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MCF7/MCF7-No5-P1.txt\n",
+      "44/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MCF7/MCF7-No5-P2.txt\n",
+      "45/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MCF7/MCF7-No5-P3.txt\n",
+      "46/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MDAMB/MDAMB-No1-P1.txt\n",
+      "47/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MDAMB/MDAMB-No1-P2.txt\n",
+      "48/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MDAMB/MDAMB-No1-P3.txt\n",
+      "49/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MDAMB/MDAMB-No2-P1.txt\n",
+      "50/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MDAMB/MDAMB-No2-P2.txt\n",
+      "51/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MDAMB/MDAMB-No2-P3.txt\n",
+      "52/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MDAMB/MDAMB-No3-P1.txt\n",
+      "53/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MDAMB/MDAMB-No3-P2.txt\n",
+      "54/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MDAMB/MDAMB-No3-P3.txt\n",
+      "55/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MDAMB/MDAMB-No4-P1.txt\n",
+      "56/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MDAMB/MDAMB-No4-P2.txt\n",
+      "57/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MDAMB/MDAMB-No4-P3.txt\n",
+      "58/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MDAMB/MDAMB-No5-P1.txt\n",
+      "59/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MDAMB/MDAMB-No5-P2.txt\n",
+      "60/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/MDAMB/MDAMB-No5-P3.txt\n",
+      "61/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/PC3/PC3-No1-P1.txt\n",
+      "62/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/PC3/PC3-No1-P2.txt\n",
+      "63/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/PC3/PC3-No1-P3.txt\n",
+      "64/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/PC3/PC3-No2-P1.txt\n",
+      "65/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/PC3/PC3-No2-P2.txt\n",
+      "66/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/PC3/PC3-No2-P3.txt\n",
+      "67/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/PC3/PC3-No3-P1.txt\n",
+      "68/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/PC3/PC3-No3-P2.txt\n",
+      "69/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/PC3/PC3-No3-P3.txt\n",
+      "70/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/PC3/PC3-No4-P1.txt\n",
+      "71/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/PC3/PC3-No4-P2.txt\n",
+      "72/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/PC3/PC3-No4-P3.txt\n",
+      "73/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/PC3/PC3-No5-P1.txt\n",
+      "74/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/PC3/PC3-No5-P2.txt\n",
+      "75/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/PC3/PC3-No5-P3.txt\n",
+      "------ End: Get common wavenumbers ------\n",
+      "------ Begin: Extract all the spectra ------\n",
+      "The preloaded wavenumbers are not the same as the desired ones. Overwrite the preloaded data.\n",
+      "Done processing 1/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No1-P1.txt\n",
+      "\n",
+      "The preloaded wavenumbers are not the same as the desired ones. Overwrite the preloaded data.\n",
+      "Done processing 2/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No1-P2.txt\n",
+      "\n",
+      "The preloaded wavenumbers are not the same as the desired ones. Overwrite the preloaded data.\n",
+      "Done processing 3/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No1-P3.txt\n",
+      "\n",
+      "The preloaded wavenumbers are not the same as the desired ones. Overwrite the preloaded data.\n",
+      "Done processing 4/75: /home/jupyter-ichatnun/projects/SERS_Analysis/data_manual_split/EX15-4-prime-stocked-exo3v15/train/HEK/HEK-No2-P1.txt\n",
+      "\n",
+      "The preloaded wavenumbers are not the same as the desired ones. Overwrite the preloaded data.\n"
+     ]
+    }
+   ],
    "source": [
     "for idx_exp, curr_exp_path in enumerate(experiment_name_list):\n",
     "    \n",
@@ -203,6 +334,7 @@
     "        df = pd.read_csv(ramanshifts_filepath)\n",
     "        desired_ramanshifts = df['shifts'].values\n",
     "        del df\n",
+    "        print('Use the raman shifts specified in', ramanshifts_filepath)\n",
     "    else:\n",
     "        # Determine common wavenumbers\n",
     "        if config.data_split_method in ['intra','inter']:\n",
