--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
     "# !{sys.executable} -m pip install tune-sklearn ray[tune]\n",
     "# !{sys.executable} -m pip install packaging\n",
     "# !{sys.executable} -m pip install -U kaleido\n",
-    "# !conda install --yes --prefix {sys.prefix} -c conda-forge ffmpeg\n",
+    "# !{sys.executable} -m pip install  ffmpeg-python\n",
     "# !conda install --yes --prefix {sys.prefix} catboost\n",
     "# !conda install --yes --prefix {sys.prefix} -c conda-forge lightgbm"
    ]
