--- a/main.ipynb
+++ b/main.ipynb
@@ -52,11 +52,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
@@ -2008,34 +2003,34 @@
     "                performAnalysis(method_name=curr_ML_method, params=params)\n",
     "            \n",
     "    # Save the evaluation metrics: accuracy, precision, recall, f1-score\n",
-    "    saveSingleEvaluationMetrics_AllMethods(metric=acc_all_reps_all_methods,\n",
-    "                                           metric_name='accuracy',\n",
-    "                                           num_repetitions,\n",
-    "                                           ML_classif_method_list,\n",
-    "                                           color_list_for_bar_plots,\n",
-    "                                           results_path)\n",
+    "    saveSingleEvaluationMetrics_AllMethods(acc_all_reps_all_methods,\n",
+    "                                       'accuracy',\n",
+    "                                       num_repetitions,\n",
+    "                                       ML_classif_method_list,\n",
+    "                                       color_list_for_bar_plots,\n",
+    "                                       results_path)\n",
     "\n",
-    "    saveSingleEvaluationMetrics_AllMethods(metric=precision_all_reps_all_methods,\n",
-    "                                           metric_name='precision',\n",
-    "                                           num_repetitions,\n",
-    "                                           ML_classif_method_list,\n",
-    "                                           color_list_for_bar_plots,\n",
-    "                                           results_path) \n",
+    "    saveSingleEvaluationMetrics_AllMethods(precision_all_reps_all_methods,\n",
+    "                                       'precision',\n",
+    "                                       num_repetitions,\n",
+    "                                       ML_classif_method_list,\n",
+    "                                       color_list_for_bar_plots,\n",
+    "                                       results_path) \n",
     "\n",
-    "    saveSingleEvaluationMetrics_AllMethods(metric=recall_all_reps_all_methods,\n",
-    "                                           metric_name='recall',\n",
-    "                                           num_repetitions,\n",
-    "                                           ML_classif_method_list,\n",
-    "                                           color_list_for_bar_plots,\n",
-    "                                           results_path)\n",
+    "    saveSingleEvaluationMetrics_AllMethods(recall_all_reps_all_methods,\n",
+    "                                       'recall',\n",
+    "                                       num_repetitions,\n",
+    "                                       ML_classif_method_list,\n",
+    "                                       color_list_for_bar_plots,\n",
+    "                                       results_path)       \n",
+    "                                                                      \n",
+    "    saveSingleEvaluationMetrics_AllMethods(f1_all_reps_all_methods,\n",
+    "                                       'f1',\n",
+    "                                       num_repetitions,\n",
+    "                                       ML_classif_method_list,\n",
+    "                                       color_list_for_bar_plots,\n",
+    "                                       results_path) \n",
     "\n",
-    "    saveSingleEvaluationMetrics_AllMethods(metric=f1_all_reps_all_methods,\n",
-    "                                           metric_name='f1',\n",
-    "                                           num_repetitions,\n",
-    "                                           ML_classif_method_list,\n",
-    "                                           color_list_for_bar_plots,\n",
-    "                                           results_path)   \n",
-    "    \n",
     "print('Done')\n",
     "print('***********************************************************')"
    ]
